--- a/branding.html
+++ b/branding.html
@@ -115,18 +115,18 @@
         <!--== Page Title Start ==-->
         <div class="transition-none">
             <section class="title-hero-bg parallax-effect"
-                style="background-image: url(assets/images/eventanner.webp);">
+                style="background-image: url(assets/images/designing-branding-banner.webp);">
                 <div class="overlay-gradient-bg-2"></div>
                 <div class="container">
                     <div class="page-title text-center white-color">
-                        <h1 class="mt-0">A <span>Corporate Video
-                            </span> &<br> Film Makers</h1>
+                        <h1 class="mt-0">Designing & <br />Branding Services
+                        </h1>
                     </div>
                 </div>
             </section>
         </div>
         <!--== Page Title End ==-->
-        <section class="pb-60 pt-60 ">
+        <section class="pb-60 pt-60 white-bg">
             <div class="container">
                 <h2 class="mt-0 text-center font-700">Here is your ideal brand production company!</h2>
                 <hr class="center_line gradient-bg-6">
@@ -134,7 +134,7 @@
 
                     <div class="col-sm-6 pt-70">
                         <div class="pat-left">
-                            <img src="./assets/images/Event-1.webp" alt="" class="img-responsive">
+                            <img src="./assets/images/DB-1.webp" alt="" class="img-responsive">
                         </div>
                     </div>
                     <div class="col-sm-6 pt-40">
@@ -157,9 +157,82 @@
             </div>
         </section>
 
+        <section class="pb-60 dark-bg pt-60 ">
+            <div class="container">
+                <h2 class="mt-0 text-center font-700 white-color">Why does your brand need it?</h2>
+                <hr class="center_line gradient-bg-6">
+                <div class="row">
+                    <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+                        <div class="counter-wrap">
+                            <img src="/assets/images/firstimpression.svg" alt="" />
+                            <h5 class="font-700 white-color">First Impressions Matter</h5>
+                        </div>
+                        <div>
+                            <p class="white-color">Your brand must make a lasting first impression in a sea of options.
+                                Effective branding ensures that when someone encounters your business
+                                for the first time, they remember it. It's like having a friendly face in a
+                                crowded room – familiar and welcoming.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+                        <div class="counter-wrap">
+                            <img src="/assets/images/Buildstrust.svg" alt="" />
+                            <h5 class="font-700 white-color">Builds Trust</h5>
+                        </div>
+                        <div>
+                            <p class="white-color">People trust what they know. A consistent and well-crafted brand
+                                builds
+                                trust with your audience. When your branding is cohesive across all
+                                touchpoints, it signals reliability and professionalism, making customers
+                                more confident in choosing your products or services.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+                        <div class="counter-wrap">
+                            <img src="/assets/images/setsyouapart2.svg" alt="" />
+                            <h5 class="font-700 white-color">Sets You Apart</h5>
+                        </div>
+                        <div>
+                            <p class="white-color">Think about your favourite brands. What makes them stand out? It's
+                                not
+                                just the product; it's the personality they've crafted through branding. Your
+                                brand identity – the colours, the logo, the tone – sets you apart and makes
+                                you memorable.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row flex-box-center">
+                    <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+                        <div class="counter-wrap">
+                            <img src="/assets/images/Connectsemotionally.svg" alt="" />
+                            <h5 class="font-700 white-color">Connects Emotionally</h5>
+                        </div>
+                        <div>
+                            <p class="white-color">Beyond the product or service, people connect with brands on an
+                                emotional
+                                level. Adequate branding taps into those emotions, creating a connection
+                                beyond transactional. It's not just about what you sell but how you make
+                                your audience feel.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+                        <div class="counter-wrap">
+                            <img src="/assets/images/boostsrecognition.svg" alt="" />
+                            <h5 class="font-700 white-color">Boosts Recognition</h5>
+                        </div>
+                        <div>
+                            <p class="white-color">We're all bombarded with information daily. Your brand needs to be
+                                easily
+                                recognisable amidst the noise. That's where branding shines – making your
+                                business instantly identifiable, even in a cluttered market.</p>
+                        </div>
+                    </div>
+                </div>
 
+            </div>
+        </section>
 
-        <section class="pb-60 white-bg pt-60 ">
+        <!-- <section class="pb-60 white-bg pt-60 ">
             <div class="container">
                 <h2 class="mt-0 text-center font-700">Why does your brand need it?</h2>
                 <hr class="center_line gradient-bg-6">
@@ -197,7 +270,7 @@
                 </div>
 
             </div>
-        </section>
+        </section> -->
 
         <!--== Call to Actions Start ==-->
         <section class="gradient-bg-6 pt-80 pb-80">
@@ -206,8 +279,7 @@
                     <div class="col-md-12 col-sm-12 white-color relative">
                         <h2
                             class="sm-mb-30 font-40px display-inline-block mr-30 font-700 mt-0 xs-text-center sm-text-center">
-                            Want
-                            to start a project today!</h2>
+                            Ready to take your brand to the next level?</h2>
                         <div
                             class="xs-display-block xs-text-center sm-display-block sm-text-center pull-right xs-centerize-col">
                             <a class="btn btn-xl btn-light btn-default pull-right mt-10 xs-centerize-col sm-centerize-col"
@@ -219,70 +291,82 @@
         </section>
         <section class="pb-60  pt-60 ">
             <div class="container">
-                <h2 class="mt-0 text-center font-700">How Skittles Productions elevates your branding and design:</h2>
+                <h2 class="mt-0 text-center font-700">How Skittles Productions elevates your branding and
+                    design:</h2>
 
                 <hr class="center_line gradient-bg-6">
                 <p class="text-center">Skittles Productions is one of the best production house in Delhi; we're your
-                    creative partners in shaping a brand that leaves a mark. Here's how we bring your brand story to
-                    life:</p>
-                <div class="row cmn_flex_box">
-
-                    <div class="col-sm-6 pt-70">
-                        <div class="pat-left">
-                            <img src="./assets/images/Event-2.webp" alt="" class="img-responsive">
-                        </div>
+                    creative partners in shaping a brand that leaves a mark. Here's how we bring
+                    your brand story to life:</p>
+                <div class="row">
+                    <div class="col-md-6 text-left mb-20 col-sm-12">
+                        <h4>Comprehensive Branding Strategy</h4>
+                        <p>We don't just design logos; we craft a comprehensive branding strategy. Our
+                            team deeply understands your business, target audience, and unique
+                            selling points. We then create a brand identity that resonates and
+                            communicates your story effectively.</p>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-xs-12 ">
-
-                        <div class="pt-40">
-                            <p>1. Comprehensive Branding Strategy:<br />We don't just design logos; we craft a
-                                comprehensive branding strategy. Our team deeply understands your business, target
-                                audience, and unique selling points. We then create a brand identity that resonates and
-                                communicates your story effectively.</p>
-                            <p>2. Creative Logo Design:<br />Your logo is your brand's face. Our creative designers work
-                                closely with you to design a visually appealing logo that encapsulates your business's
-                                essence. It's more than an image; it's your brand's signature.</p>
-                            <p>3. Consistent Visual Elements:<br />Consistency is key in branding. From colour schemes
-                                to typography, we ensure your visual elements are consistent across all platforms. It's
-                                this uniformity that builds recognition and reinforces your brand identity.
-                            </p>
-                            <p>4. Engaging Graphic Design:<br />Our graphic design services go beyond aesthetics. We
-                                create visually engaging materials – from business cards to social media posts – that
-                                tell your brand story cohesively. It's about making every touchpoint with your audience
-                                count.</p>
-                            <p>5. Strategic Brand Messaging:<br />Words matter. Our team works on crafting strategic
-                                brand messaging that communicates your values and resonates with your audience. Whether
-                                it's website copy or a catchy tagline, we ensure your brand voice is clear and
-                                compelling.</p>
-                            <p>6. Affordable Excellence:<br />We believe in making top-tier branding and design
-                                accessible to businesses of all sizes. Our pricing is transparent, and there are no
-                                hidden costs. Quality branding doesn't have to break the bank; we're here to prove it.
-                            </p>
-                        </div>
+                    <div class="col-md-6 text-left mb-20 col-sm-12">
+                        <h4>Engaging Graphic Design</h4>
+                        <p>Our graphic design services go beyond aesthetics. We create visually
+                            engaging materials – from business cards to social media posts – that tell
+                            your brand story cohesively. It's about making every touchpoint with your
+                            audience count.</p>
                     </div>
-
+                    <div class="col-md-6 text-left mb-20 col-sm-12">
+                        <h4>Consistent Visual Elements</h4>
+                        <p>Consistency is key in branding. From colour schemes to typography, we
+                            ensure your visual elements are consistent across all platforms. It's this
+                            uniformity that builds recognition and reinforces your brand identity.</p>
+                    </div>
+                    <div class="col-md-6 text-left mb-20 col-sm-12">
+                        <h4>Creative Logo Design</h4>
+                        <p>Your logo is your brand's face. Our creative designers work closely with you
+                            to design a visually appealing logo that encapsulates your business's
+                            essence. It's more than an image; it's your brand's signature.</p>
+                    </div>
+                    <div class="col-md-6 text-left mb-20 col-sm-12">
+                        <h4>Strategic Brand Messaging</h4>
+                        <p>Words matter. Our team works on crafting strategic brand messaging that
+                            communicates your values and resonates with your audience. Whether it's
+                            website copy or a catchy tagline, we ensure your brand voice is clear and
+                            compelling.</p>
+                    </div>
+                    <div class="col-md-6 text-left mb-20 col-sm-12">
+                        <h4>Affordable Excellence</h4>
+                        <p>We believe in making top-tier branding and design accessible to
+                            businesses of all sizes. Our pricing is transparent, and there are no hidden
+                            costs. Quality branding doesn't have to break the bank; we're here to prove
+                            it.</p>
+                    </div>
                 </div>
 
             </div>
         </section>
         <!--== Call to Actions End ==-->
 
-        <section class="pb-60 white-bg pt-60">
+        <section class="pb-60 gradient-bg-6 pt-60">
             <div class="container">
-                <h2 class="mt-0 text-center font-700">Ready to Transform Your Brand? Contact Skittles Production Today!
+                <h2 class="mt-0 text-center white-color font-700">Ready to Transform Your Brand? Contact Skittles
+                    Production Today!
                 </h2>
-                <hr class="center_line gradient-bg-6">
+                <hr class="center_line white-bg">
                 <div class="row">
                     <div class="col-md-12 pt-40">
 
-                        <p class="grey-color" align="justify">
-                            Your brand is more than a logo; it's a story waiting to be told. Skittles Productions is
-                            here to be the storyteller that crafts a brand identity worth remembering.
+                        <p class="white-color" align="justify">
+                            Your brand is more than a logo; it's a story waiting to be told. Every detail, every color,
+                            every font choice - they all weave together to create an unforgettable narrative for your
+                            brand. At Skittles Productions, we understand the importance of authenticity and resonance
+                            in design. Our team is committed to capturing the essence of your brand and translating it
+                            into visuals that speak volumes.
                             <br />
                             <br />
-                            Contact us today, and let's embark on the journey of shaping a brand that stands out.
-                            Skittles Productions – Your Story, Our Canvas!
-
+                            Reach out to us now, and together, let's give your brand the voice it deserves. Skittles
+                            Productions is not just about designing; it's about crafting experiences that leave a
+                            lasting impression. Your brand is unique, and we're here to ensure it shines brightly in the
+                            crowded marketplace. Let's paint your story on the canvas of success, one pixel at a time.
+                            Get in touch today, and let the journey begin
                         </p>
                     </div>
 
