--- a/corporate-video-production.html
+++ b/corporate-video-production.html
@@ -111,7 +111,8 @@
 
     <!--== Page Title Start ==-->
     <div class="transition-none">
-      <section class="title-hero-bg parallax-effect" style="background-image: url(/assets/images/CorporateVideo-banner.webp);">
+      <section class="title-hero-bg parallax-effect"
+        style="background-image: url(/assets/images/CorporateVideo-banner.webp);">
         <div class="overlay-gradient-bg-2"></div>
         <div class="container">
           <div class="page-title text-center white-color">
@@ -130,7 +131,7 @@
 
           <div class="col-sm-6 pt-70">
             <div class="pat-left">
-              <img src="./assets/images/Corporate-2.webp" alt="" class="img-responsive h-img">
+              <img src="./assets/images/CV-1.webp" alt="" class="img-responsive h-img">
             </div>
           </div>
           <div class="col-sm-6 pt-40">
@@ -153,9 +154,9 @@
 
 
 
-    <section class="pb-60 pt-60 ">
+    <section class="pb-60 dark-bg pt-60 ">
       <div class="container">
-        <h2 class="mt-0 text-center font-700">Advantages of Corporate Video For Your Business</h2>
+        <h2 class="mt-0 text-center white-color font-700">Advantages of Corporate Video For Your Business</h2>
         <hr class="center_line gradient-bg-6">
         <div class="row video_prd_img_box">
 
@@ -188,8 +189,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 col-sm-12 white-color relative">
-            <h2 class="sm-mb-30 font-40px display-inline-block mr-30 font-700 mt-0 xs-text-center sm-text-center">Want
-              to start a project today ?</h2>
+            <h2 class="sm-mb-30 font-40px display-inline-block mr-30 font-700 mt-0 xs-text-center sm-text-center">Need
+              for a corporate video for your business?</h2>
             <div class="xs-display-block xs-text-center sm-display-block sm-text-center pull-right xs-centerize-col">
               <a class="btn btn-xl btn-light btn-default pull-right mt-10 xs-centerize-col sm-centerize-col"
                 data-toggle="modal" data-target="#myModal">Get a quote</a>
@@ -202,44 +203,39 @@
 
     <section class="pb-60 white-bg pt-60">
       <div class="container">
-        <h2 class="mt-0 text-center font-700">Creative Video Production Company</h2>
+        <h2 class="mt-0 text-center font-700">We understand Corporate Video Production</h2>
         <hr class="center_line gradient-bg-6">
         <div class="row">
           <div class="col-md-12 pt-40">
 
-            <p class="grey-color" align="justify">Skittles Productions is a dynamic film production house in Delhi NCR,
-              that provides a wide array of video production services to the clients. Our proactive &amp; proficient
-              team of filmmakers and video production professionals have expertise and leave no stone unturned to come
-              up with unique solution. We offer thought-provoking pieces of art which will compel viewers to think and
-              explore the brand. If you wish to create a long-lasting impression on your audience while giving them a
-              reason to invest in your services, our film production company help you with the customized business plan.
-              Connect with us to our perseverance and dedication which we put limitlessly in all our projects.
-
-              No matter what type of video content you're looking for, we are right here to help you bring your vision
-              to life. If you're not sure where to start, try searching for video production companies in your area or
-              online. Once you've found a few companies that you're interested in, reach out to them and see if they're
-              a good fit for your project.
-
-              As a video production company, it is very crucial to have your own website. If your business is not
-              available online, then you will miss out on reaching a wider audience and making your brand known to more
-              people. As a film producer, you are supposed to showcase your work and attract more people with the work
-              you do.
-
-              As per the study, making online videos will take around 80% of all the internet traffic and will be much
-              higher compared to the previous years. Video production is on the rise and very much in demand in this
-              digital world. The best part is that it is one of the best ways to help the users to take the content and
-              connect with it. Videos are a great way to increase the engagement of the audience like no other way. That
-              is the reason it is best for video production companies to promote their projects online. By using a video
-              on your website homepage, it can help in increasing the conversion to more than 90%. So it is very
-              important to make the best use of video. We are video production company with a proven track record
-              delivering high-quality films, videos and animations for businesses of all sizes. We understand that every
-              project is different and requires our creativity and attention. Each of our projects receives the same
-              level of dedication in terms of planning, creativity, budgeting, originality and quality.</p>
-            <p class="grey-color" align="justify">Skittles Productions is steadily and consistently working towards its
-              objective to become one of the top film production companies in Delhi, India. Our innovative and brilliant
-              ideas are worth exploring for engaging users. From creative films, TV commercial ads, corporate videos,
-              explainer video, testimonials video and documentaries to other video production services, we also envision
-              to become the stellar video production company in Delhi, India.</p>
+            <p class="grey-color" align="justify">As a leading corporate video production company, we specialize in
+              crafting compelling visual narratives that elevate your brand's significance. Our team of best corporate
+              filmmakers and corporate event videographers meticulously curate each project, ensuring a bespoke touch
+              that resonates with your audience.
+              <br />
+              <br />
+              With Skittles Productions, you're not just getting a run-of-the-mill corporate video production house;
+              you're partnering with innovators who understand the power of storytelling. Our dedication to excellence
+              shines through in every project we undertake, whether it's product videos shoots, corporate events, or
+              branding campaigns.
+              <br />
+              <br />
+              Our commitment to being the best corporate film makers in Delhi drives us to push boundaries and deliver
+              unparalleled results. We pride ourselves on our ability to translate your vision into captivating visual
+              experiences that leave a lasting impression.
+              <br />
+              <br />
+              In today's digital landscape, having a strong online presence is non-negotiable. As a corporate video
+              production company in Delhi, we recognize the importance of showcasing your work and connecting with a
+              wider audience. With video content projected to dominate internet traffic, harnessing the power of video
+              production is essential for businesses looking to thrive in the digital age.
+              <br />
+              <br />
+              At Skittles Productions, we're not just another video production company. We're your partners in success,
+              dedicated to bringing your brand to life through the magic of video. Contact us today to kickstart your
+              journey towards creating impactful corporate videos that set you apart from the competition. Let's make
+              your vision a reality together.
+            </p>
           </div>
           <!-- <div class="col-md-5 pt-40"> -->
           <!-- <img src="https://skittlesproductions.com/images/home-about.jpg" alt="" /> -->
