--- a/events-marketing-videos.html
+++ b/events-marketing-videos.html
@@ -116,8 +116,9 @@
         <div class="overlay-gradient-bg-2"></div>
         <div class="container">
           <div class="page-title text-center white-color">
-            <h1 class="mt-0">A <span>Corporate Video
-              </span> &<br> Film Makers</h1>
+            <h1 class="mt-0">Wedding &
+              <br>Event Films
+            </h1>
           </div>
         </div>
       </section>
@@ -154,38 +155,69 @@
 
       </div>
     </section>
-
-
-
-    <section class="pb-60 white-bg pt-60 ">
+    <section class="pb-60 dark-bg pt-60 ">
       <div class="container">
-        <h2 class="mt-0 text-center font-700">Why does your event need a film:</h2>
+        <h2 class="mt-0 text-center font-700 white-color">Why does your event need a film:</h2>
         <hr class="center_line gradient-bg-6">
-        <div class="row cmn_flex_box">
-
-
-          <div class="col-lg-6 col-md-6 col-xs-12 ">
-            <div class="pt-40">
-              <p>1. Preserving Memories:<br />Your wedding or event is a one-time affair, and the memories created
-                deserve to be preserved in more than just photographs. A film captures the laughter, the vows, the
-                dances – all in motion, bringing your day back to life whenever you hit play.</p>
-              <p>2. Reliving Emotions:<br />Photos freeze moments, but films capture emotions. The tears in your eyes
-                during the vows, the joyous laughter, the excitement on the dance floor – a wedding or event film
-                ensures you can relive those emotions as if you're right back in the moment.</p>
-              <p>3. Sharing with Loved Ones:<br />Not everyone can attend every event, but a well-crafted film allows
-                you to share the experience with those who couldn't make it. It's like inviting them to the heart of the
-                celebration, making them feel like they were right there with you.</p>
-              <p>4. Cinematic Experience:<br />A wedding or event film is not just a recording; it's a cinematic
-                experience. With the right storytelling, music, and visuals, it turns your day into a movie-like
-                experience that captivates and moves everyone who watches it.</p>
-              <p>5. Capturing the Unseen:<br />While you're caught up in the whirlwind of the day, there are moments you
-                might miss. A film captures what you see and the behind-the-scenes, candid expressions and little
-                details that make your event uniquely yours.</p>
+        <div class="row">
+          <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+            <div class="counter-wrap">
+              <img src="/assets/images/preservingmemories.svg" alt="" />
+              <h5 class="font-700 white-color">Preserving Memories</h5>
+            </div>
+            <div>
+              <p class="white-color">Your wedding or event is a one-time affair, and the memories created
+                deserve to be preserved in more than just photographs. A film captures the
+                laughter, the vows, the dances – all in motion, bringing your day back to life
+                whenever you hit play.</p>
             </div>
           </div>
-          <div class="col-sm-6 pt-70">
-            <div class="pat-left">
-              <img src="./assets/images/Event-2.webp" alt="" class="img-responsive">
+          <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+            <div class="counter-wrap">
+              <img src="/assets/images/relivingemotions.svg" alt="" />
+              <h5 class="font-700 white-color">Reliving Emotions</h5>
+            </div>
+            <div>
+              <p class="white-color">Photos freeze moments, but films capture emotions. The tears in your eyes
+                during the vows, the joyous laughter, the excitement on the dance floor – a
+                wedding or event film ensures you can relive those emotions as if you're
+                right back in the moment.</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+            <div class="counter-wrap">
+              <img src="/assets/images/Lovedones.svg" alt="" />
+              <h5 class="font-700 white-color">Sharing with Loved Ones</h5>
+            </div>
+            <div>
+              <p class="white-color">Not everyone can attend every event, but a well-crafted film allows you to
+                share the experience with those who couldn't make it. It's like inviting them
+                to the heart of the celebration, making them feel like they were right there
+                with you.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row flex-box-center">
+          <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+            <div class="counter-wrap">
+              <img src="/assets/images/Cinematicexperience.svg" alt="" />
+              <h5 class="font-700 white-color">Cinematic Experience </h5>
+            </div>
+            <div>
+              <p class="white-color">A wedding or event film is not just a recording; it's a cinematic experience.
+                With the right storytelling, music, and visuals, it turns your day into a
+                movie-like experience that captivates and moves everyone who watches it.</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+            <div class="counter-wrap">
+              <img src="/assets/images/capturidngtheunseen.svg" alt="" />
+              <h5 class="font-700 white-color">Capturing the Unseen</h5>
+            </div>
+            <div>
+              <p class="white-color">While you're caught up in the whirlwind of the day, there are moments you
+                might miss. A film captures what you see and the behind-the-scenes,
+                candid expressions and little details that make your event uniquely yours.</p>
             </div>
           </div>
         </div>
@@ -193,13 +225,14 @@
       </div>
     </section>
 
+
     <!--== Call to Actions Start ==-->
     <section class="gradient-bg-6 pt-80 pb-80">
       <div class="container">
         <div class="row">
           <div class="col-md-12 col-sm-12 white-color relative">
-            <h2 class="sm-mb-30 font-40px display-inline-block mr-30 font-700 mt-0 xs-text-center sm-text-center">Want
-              to start a project today!</h2>
+            <h2 class="sm-mb-30 font-40px display-inline-block mr-30 font-700 mt-0 xs-text-center sm-text-center">Ready
+              to cherish memories for a lifetime?</h2>
             <div class="xs-display-block xs-text-center sm-display-block sm-text-center pull-right xs-centerize-col">
               <a class="btn btn-xl btn-light btn-default pull-right mt-10 xs-centerize-col sm-centerize-col"
                 data-toggle="modal" data-target="#myModal">Get a quote</a>
@@ -216,52 +249,59 @@
         <p class="text-center">Skittles Productions is not just another video production agency in Delhi for your event
           after videos; we're
           your partners in creating timeless memories. Here's how we do your wedding film shoot:</p>
-        <div class="row cmn_flex_box">
-
-          <div class="col-sm-6 pt-70">
-            <div class="pat-left">
-              <img src="./assets/images/Event-2.webp" alt="" class="img-responsive">
-            </div>
+        <div class="row">
+          <div class="col-md-6 text-left mb-20 col-sm-12">
+            <h4>Storytelling Expertise</h4>
+            <p>We don't just capture moments; we weave them into a narrative. Our team
+              excels in storytelling, ensuring your film isn't just a sequence of events but
+              a captivating story that unfolds on screen.</p>
           </div>
-          <div class="col-lg-6 col-md-6 col-xs-12 ">
-
-            <div class="pt-40">
-              <p>1. Storytelling Expertise:<br />We don't just capture moments; we weave them into a narrative. Our team
-                excels in storytelling, ensuring your film isn't just a sequence of events but a captivating story that
-                unfolds on screen.</p>
-              <p>2. Personalized Approach:<br />Your story is unique, and so should your film. We work closely with you
-                to understand your vision, preferences, and the most critical moments. The result? It is a film that
-                reflects your personality and the essence of your celebration.</p>
-              <p>3. Top-notch Equipment:<br />Quality matters. We invest in the latest equipment to ensure your film is
-                emotionally rich and visually stunning. With crystal-clear visuals and crisp audio, we leave no stone
-                unturned.</p>
-              <p>4. Efficient Team:<br />Weddings and events are fast-paced, and we get that. Our efficient team ensures
-                we capture every critical moment without intruding on the natural flow of your day. From the ceremony to
-                the dance floor, we discreetly capture it all.</p>
-              <p>5. Transparent Process:<br />No hidden surprises here! Our pricing is transparent, and we walk you
-                through the entire process, from planning to editing. We believe in clear communication and delivering a
-                film that exceeds your expectations.</p>
-              <p>6. Relive Your Moments with Skittles Productions:<br />Your wedding or event is more than just a day –
-                a story waiting to be told. Let Skittles Production be the narrator, turning your moments into a
-                cinematic masterpiece. </p>
-            </div>
+          <div class="col-md-6 text-left mb-20 col-sm-12">
+            <h4>Transparent Process</h4>
+            <p>No hidden surprises here! Our pricing is transparent, and we walk you
+              through the entire process, from planning to editing. We believe in clear
+              communication and delivering a film that exceeds your expectations.</p>
           </div>
-
+          <div class="col-md-6 text-left mb-20 col-sm-12">
+            <h4>Personalized Approach</h4>
+            <p>Your story is unique, and so should your film. We work closely with you to
+              understand your vision, preferences, and the most critical moments. The
+              result? It is a film that reflects your personality and the essence of your
+              celebration.</p>
+          </div>
+          <div class="col-md-6 text-left mb-20 col-sm-12">
+            <h4>Efficient Team</h4>
+            <p>Weddings and events are fast-paced, and we get that. Our efficient team
+              ensures we capture every critical moment without intruding on the natural
+              flow of your day. From the ceremony to the dance floor, we discreetly capture it all.</p>
+          </div>
+          <div class="col-md-6 text-left mb-20 col-sm-12">
+            <h4>Top-notch Equipment</h4>
+            <p>Quality matters. We invest in the latest equipment to ensure your film is
+              emotionally rich and visually stunning. With crystal-clear visuals and crisp
+              audio, we leave no stone unturned.</p>
+          </div>
+          <div class="col-md-6 text-left mb-20 col-sm-12">
+            <h4>Relive Your Moments with Skittles Productions</h4>
+            <p>Your wedding or event is more than just a day – a story waiting to be told.
+              Let Skittles Productions be the narrator, turning your moments into a
+              cinematic masterpiece.</p>
+          </div>
         </div>
 
       </div>
     </section>
     <!--== Call to Actions End ==-->
 
-    <section class="pb-60 white-bg pt-60">
+    <section class="pb-60 gradient-bg-6 pt-60">
       <div class="container">
-        <h2 class="mt-0 text-center font-700">Choose Skittles Productions for your pre-wedding video shoot!
+        <h2 class="mt-0 text-center white-color font-700">Choose Skittles Productions for your pre-wedding video shoot!
         </h2>
         <hr class="center_line gradient-bg-6">
         <div class="row">
           <div class="col-md-12 pt-40">
 
-            <p class="grey-color" align="justify">
+            <p class="white-color" align="justify">
               Planning your pre-wedding video shoot? Look no further than Skittles to add colour and joy to your special
               moments. Imagine your love story unfolding amidst a vibrant backdrop of Skittles - the playful and
               delicious candy that brings a rainbow of happiness to your photos.
