--- a/short-film.html
+++ b/short-film.html
@@ -16,8 +16,8 @@
   <!-- Revolution Style Sheets -->
   <link rel="stylesheet" type="text/css" href="revolution/css/settings.css">
   <link rel="stylesheet" type="text/css" href="revolution/css/layers.css">
-  <link rel="stylesheet" type="text/csss" href="revolution/css/navigation.css">
-
+  <link rel="stylesheet" type="text/css" href="revolution/css/navigation.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/common.css">
 </head>
 
 <body>
@@ -118,7 +118,7 @@
         <div class="overlay-gradient-bg-2"></div>
         <div class="container">
           <div class="page-title text-center white-color">
-            <h1 class="mt-0"><span class="play-font font-italic">Short Video
+            <h1 class="mt-0"><span >Campaign Videos
 
               </span> </h1>
           </div>
@@ -134,7 +134,7 @@
 
           <div class="col-sm-6 pt-70">
             <div class="pat-left">
-              <img src="./assets/images/Campaign-1.webp" alt="" class="img-responsive">
+              <img src="./assets/images/TV-1.jpg" alt="" class="img-responsive">
             </div>
           </div>
           <div class="col-sm-6 pt-40">
@@ -157,11 +157,11 @@
 
       </div>
     </section>
-    <section class="pb-60 white-bg pt-60 ">
+    <section class="pb-60 dark-bg pt-60 ">
       <div class="container">
-        <h2 class="mt-0 text-center font-700">Types of campaign marketing Videos:</h2>
+        <h2 class="mt-0 text-center white-color font-700">Types of campaign marketing Videos:</h2>
         <hr class="center_line gradient-bg-6">
-        <div class="row video_prd_img_box">
+        <!-- <div class="row video_prd_img_box">
 
 
           <div class="col-lg-12 col-md-12 col-xs-12 ">
@@ -214,13 +214,93 @@
               </p>
             </div>
           </div>
-          <!-- <div class="col-sm-6 pt-70">
-            <div class="pat-left">
-              <img src="./assets/images/Corporate-3.webp" alt="" class="img-responsive h-img">
+        </div> -->
+        <div class="row mt-40">
+          <div class="col-md-6 feature-box text-center  mb-50 col-sm-12 animation-move-top">
+            <div class="pr-40 pl-40">
+              <h4 class="mt-0 font-600 orange-color ">Product Launch Videos</h4>
+              <p class="font-400 white-color">Introducing a new product to the market. Product launch videos are all
+                about creating
+                excitement and anticipation. They showcase the product's
+                features, benefits, and uniqueness to build curiosity and drive early interest.</p>
             </div>
-          </div> -->
+          </div>
+          <div class="col-md-6 feature-box text-center mb-50 col-sm-12 animation-move-top">
+            <div class="pr-40 pl-40">
+              <h4 class="mt-0 font-600 orange-color">Brand Awareness Videos</h4>
+              <p class="font-400 white-color">Increasing visibility and recognition of a brand. Brand awareness videos
+                tell your
+                brand's story – its values, mission, and identity. These videos
+                focus on creating a memorable impression, often using emotional storytelling to connect with the
+                audience on a personal level.</p>
+            </div>
+          </div>
+          <div class="col-md-6 feature-box text-center col-sm-12 animation-move-top">
+            <div class="pr-40 pl-40">
+              <h4 class="mt-0 font-600 orange-color">Promotional Offer Videos</h4>
+              <p class="font-400 white-color">Highlighting special promotions, discounts, or limited-time offers. These
+                videos aim
+                to create a sense of urgency and encourage viewers to take
+                immediate action. Whether it's a flash sale, a seasonal discount, or a buy-one-get-one-free deal,
+                promotional offer videos are designed to boost sales
+                quickly.</p>
+            </div>
+          </div>
+          <div class="col-md-6 feature-box text-center col-sm-12 animation-move-top">
+            <div class="pr-40 pl-40">
+              <h4 class="mt-0 font-600 orange-color">Event Promotion Videos</h4>
+              <p class="font-400 white-color">Generating interest and attendance for an upcoming event. Event promotion
+                videos build
+                excitement and provide a sneak peek into what
+                attendees can expect. They showcase the event's highlights, speakers, and activities, encouraging the
+                audience to mark their calendars and participate.</p>
+            </div>
+          </div>
         </div>
 
+
+        <div class="row pt-40">
+          <div class="col-md-6 feature-box text-center mb-50 col-sm-12 animation-move-top">
+            <div class="pr-40 pl-40">
+              <h4 class="mt-0 font-600 orange-color">Testimonial Videos</h4>
+              <p class="font-400 white-color">Building trust and credibility by featuring customer experiences.
+                Testimonial videos
+                let satisfied customers share their positive experiences with
+                your product or service. These authentic testimonials provide social proof, assuring potential customers
+                of your brand's value and quality.</p>
+            </div>
+          </div>
+          <div class="col-md-6 feature-box text-center mb-50 col-sm-12 animation-move-top">
+            <div class="pr-40 pl-40">
+              <h4 class="mt-0 font-600 orange-color">Social Media Teasers</h4>
+              <p class="font-400 white-color">Providing valuable information or teaching a specific skill. Educational
+                videos
+                position your brand as an authority in your industry. Whether it's a
+                how-to guide, product demonstration, or industry insights, these videos offer value to the audience
+                while subtly showcasing your expertise.</p>
+            </div>
+          </div>
+          <div class="col-md-6 feature-box text-center col-sm-12 animation-move-top">
+            <div class="pr-40 pl-40">
+              <h4 class="mt-0 font-600 orange-color">Educational/Instructional Videos</h4>
+              <p class="font-400 white-color">Generating curiosity and anticipation for an upcoming campaign. Social
+                media teasers
+                are short, engaging videos to tease an upcoming
+                campaign or product launch. These snippets create buzz on social platforms, encouraging followers to
+                stay tuned for the full reveal.</p>
+            </div>
+          </div>
+          <div class="col-md-6 feature-box text-center col-sm-12 animation-move-top">
+            <div class="pr-40 pl-40">
+              <h4 class="mt-0 font-600 orange-color">Charity/CSR Videos</h4>
+              <p class="font-400 white-color">Highlighting the brand's social responsibility and community involvement.
+                Charity or
+                Corporate Social Responsibility (CSR) videos showcase your
+                brand's positive impact on society. These videos focus on your commitment to making a difference and
+                fostering a positive brand image.</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -264,7 +344,7 @@
           </div>
           <div class="col-sm-6 pt-70">
             <div class="pat-left">
-              <img src="./assets/images/Corporate-3.webp" alt="" class="img-responsive h-img">
+              <img src="./assets/images/CV-2.webp" alt="" class="img-responsive h-img">
             </div>
           </div>
         </div>
@@ -272,37 +352,68 @@
       </div>
     </section>
 
-    <section class="pb-60 white-bg pt-60 ">
+    <section class="pb-60 dark-bg pt-60 ">
       <div class="container">
-        <h2 class="mt-0 text-center font-700">Advantages of Corporate Video For Your Business</h2>
+        <h2 class="mt-0 text-center font-700 white-color">Advantages of Corporate Video For Your Business</h2>
         <hr class="center_line gradient-bg-6">
         <div class="row video_prd_img_box">
-
-
-
-          <div class="col-sm-6 pt-70">
-            <div class="pat-left">
-              <img src="./assets/images/Corporate-3.webp" alt="" class="img-responsive h-img">
+          <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+            <div class="counter-wrap">
+              <img src="/assets/images/DrivesAction.svg" alt="" />
+              <h5 class="font-700 white-color">Grabs Attention</h5>
+            </div>
+            <div>
+              <p class="white-color">In a world where attention spans are shorter than ever, a campaign video is
+                your secret weapon to grab eyeballs. It's not just another piece of content;
+                it's a visual experience that stops the scroll and makes your audience take
+                notice.</p>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 col-xs-12 ">
-            <div class="pt-40">
-              <p>1. Grabs Attention:<br />In a world where attention spans are shorter than ever, a campaign
-                video is
-                your secret weapon to grab eyeballs. It's not just another piece of content; it's a visual experience
-                that stops the scroll and makes your audience take notice.</p>
-              <p>2. Conveys Your Message Clearly: <br />Words can be misunderstood, but visuals? They speak a universal
-                language. A campaign video ensures that your message is crystal clear, leaving no room for confusion.
-                Whether it's a product launch or a brand message, the video gets the point across effectively.</p>
-              <p>3. Boosts Engagement:<br />Campaign videos are shareable, likeable, and comment-worthy. They create a
-                buzz around your brand and get people talking. The more engagement, the more visibility – it's a digital
-                marketing win!</p>
-              <p>4. Sets You Apart: <br />Standing out in the digital crowd is no easy feat. A well-crafted campaign
-                video distinguishes your brand from the competition. It's not just about being seen; it's about being
-                remembered.</p>
-              <p>5. Drives Action:<br />The ultimate goal? Prompting your audience to take action. Whether it's making a
-                purchase, signing up, or sharing your content, a compelling campaign video is the nudge your audience
-                needs to make that move.</p>
+          <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+            <div class="counter-wrap">
+              <img src="/assets/images/GrabsAttention.svg" alt="" />
+              <h5 class="font-700 white-color">Conveys Your Message Clearly</h5>
+            </div>
+            <div>
+              <p class="white-color">Words can be misunderstood, but visuals? They speak a universal language.
+                A campaign video ensures that your message is crystal clear, leaving no
+                room for confusion. Whether it's a product launch or a brand message, the
+                video gets the point across effectively.</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+            <div class="counter-wrap">
+              <img src="/assets/images/BoostsEngagement.svg" alt="" />
+              <h5 class="font-700 white-color">Boosts Engagement</h5>
+            </div>
+            <div>
+              <p class="white-color">Campaign videos are shareable, likeable, and comment-worthy. They create
+                a buzz around your brand and get people talking. The more engagement, the
+                more visibility – it's a digital marketing win!</p>
+            </div>
+          </div>
+        </div>
+        <div class="row flex-box-center">
+          <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+            <div class="counter-wrap">
+              <img src="/assets/images/SetsYouApart.svg" alt="" />
+              <h5 class="font-700 white-color">Sets You Apart</h5>
+            </div>
+            <div>
+              <p class="white-color">Standing out in the digital crowd is no easy feat. A well-crafted campaign
+                video distinguishes your brand from the competition. It's not just about
+                being seen; it's about being remembered.</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+            <div class="counter-wrap">
+              <img src="/assets/images/DrivesAction.svg" alt="" />
+              <h5 class="font-700 white-color">Conveys Your Message Clearly</h5>
+            </div>
+            <div>
+              <p class="white-color">The ultimate goal? Prompting your audience to take action. Whether it's
+                making a purchase, signing up, or sharing your content, a compelling
+                campaign video is the nudge your audience needs to make that move.</p>
             </div>
           </div>
         </div>
@@ -310,48 +421,36 @@
       </div>
     </section>
 
-    <section class="pb-60 pt-60">
+    <section class="pb-60 gradient-bg-6 pt-60">
       <div class="container">
-        <h2 class="mt-0 text-center font-700">How skittles production can help:
+        <h2 class="mt-0 text-center white-color font-700">How skittles production can help:
         </h2>
-        <hr class="center_line gradient-bg-6">
+        <hr class="center_line white-bg">
         <div class="row">
           <div class="col-md-12 pt-40">
 
-            <p class="grey-color" align="justify">
-              Enough about the why; let's talk about the how. Skittles Production is not just another production house
+            <p class="white-color" align="justify">
+              Enough about the why; let's talk about the how. Skittles Productions is not just another production house
               in Delhi – we're your creative partners, your visual storytellers. Here's how we make campaign videos that
-              pack a punch.
-              <br />
-              <br />
-              We don't believe in one-size-fits-all. Your brand is unique, and so should your campaign video. Our team
-              works closely with you to understand your goals, target audience, and the message you want to convey.
+              pack a punch. We don't believe in one-size-fits-all. Your brand is unique, and so should your campaign
+              video. Our team works closely with you to understand your goals, target audience, and the message you want
+              to convey.
               <br />
               <br />
               Our team is a mix of creatives and visionaries. We don't just make videos; we craft visual experiences.
               From script to screen, we infuse creativity into every frame, ensuring your campaign video is
-              extraordinary.
+              extraordinary. Staying ahead in the digital game requires top-notch technology. We invest in the latest
+              equipment and techniques to deliver campaign videos that are not just visually stunning but also
+              technically superior. Budgets matter, and we get it. Our pricing is transparent, with no hidden costs. We
+              believe in providing high-quality campaign videos that won't break the bank. Significant impact, small
+              dent in your budget – that's our promise. We know time is of the essence in the digital world. Our
+              efficient team ensures that the campaign video shoot is exceptional and delivered on time—no delays, no
+              excuses – just prompt, quality service.
               <br />
               <br />
-              Staying ahead in the digital game requires top-notch technology. We invest in the latest equipment and
-              techniques to deliver campaign videos that are not just visually stunning but also technically superior.
-              <br />
-              <br />
-              Budgets matter, and we get it. Our pricing is transparent, with no hidden costs. We believe in providing
-              high-quality campaign videos that won't break the bank. Significant impact, small dent in your budget –
-              that's our promise.
-              <br />
-              <br />
-              We know time is of the essence in the digital world. Our efficient team ensures that the campaign video
-              shoot is exceptional and delivered on time—no delays, no excuses – just prompt, quality service.
-              <br />
-              <br />
-              Ready to Elevate Your Campaign? Contact Skittles Production Today!
-              <br />
-              <br />
-              There you have it – the lowdown on campaign videos and why Skittles Production is your ideal partner in
+              There you have it – the lowdown on campaign videos and why Skittles Productions is your ideal partner in
               making them extraordinary. Contact us today if you're ready to boost your brand, engage your audience, and
-              leave a lasting impression. Skittles Production – Where Your Ideas Meet Our Expertise! Your ideal choice
+              leave a lasting impression. Skittles Productions – Where Your Ideas Meet Our Expertise! Your ideal choice
               for the campaign video shoot.
             </p>
           </div>
